2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/ui/Makefile.am:
	Remove ondemandbrowser.py

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/misc/httpserver/Makefile.am:
	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/ondemandbrowser.py (added):
	* flumotion/ui/ondemandbrowser.py (deleted):
	Add OndemandBrowser to the httpserver bundle.

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* data/cortado-template.html:
	Replaced wrong url to get java.

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/misc/httpserver/admin_gtk.py:
	Disable OndemandBrowser when serving cortado.

2010-02-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	* flumotion/admin/gtk/componentview.py:
	Added support in the admin view when multiple components selected.
	* flumotion/component/component.py:
	Added total memory to the component's uiState.
	* flumotion/component/base/Makefile.am:
	* flumotion/component/base/base.xml:
	* flumotion/component/base/multiple.py (added):
	Added admin view for multiple components.
	Show cpu/memory usage for each component selected.
	Closes #1317

2010-02-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* data/glade/admin.glade:
	* data/glade/sectionwizard.glade:
	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/message.py:
	Improved the MessageView widget in the admin and wizard views.
	Fixed an issue when moving down the slider in the admin view.

2010-02-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas, xqueralt
	patch by: Zaheer Abbas Merali

	* flumotion/component/eater.py:
	* flumotion/component/feedcomponent010.py:
	Fix case where streamheader gets repeated in-stream and causes
	client breakage.
