@@ -1,3 +1,10 @@
+2010-02-25  Sébastien Merle  <sebastien@flumotion.com>
+
+	* flumotion/component/misc/httpserver/httpcached/http_client.py:
+	* flumotion/component/misc/httpserver/httpcached/request_manager.py:
+	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
+	Added the proxy info in some warning log entries.
+
 2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>
 
 	* flumotion/ui/Makefile.am:
